# docs/swagger.json
@@ -20,7 +20,12 @@
     "paths": {
         "/comments/get/{id}": {
             "get": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "By specifying the comment id, you can read that comment",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,11 +35,12 @@
                 "tags": [
                     "comments"
                 ],
-                "summary": "Used to show a specified comment",
+                "summary": "Read a specified comment",
                 "parameters": [
                     {
+                        "minimum": 1,
                         "type": "integer",
-                        "description": "The ID of the requested mehm",
+                        "description": "The ID of the requested comment",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -74,7 +80,12 @@
                 }
             },
             "post": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "With this API-Call you are able to post a comment related to any existing Mehm.",
                 "consumes": [
                     "application/json"
                 ],
@@ -84,9 +95,11 @@
                 "tags": [
                     "comments"
                 ],
-                "summary": "Used to add a new comment",
+                "summary": "Post a comment",
                 "parameters": [
                     {
+                        "maxLength": 256,
+                        "minLength": 1,
                         "type": "string",
                         "description": "The comment",
                         "name": "comment",
@@ -94,6 +107,7 @@
                         "required": true
                     },
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "description": "The mehm",
                         "name": "mehmId",
@@ -137,7 +151,12 @@
         },
         "/comments/update": {
             "post": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "Here you can edit previously posted comments. An Admin will be able to edit other people's comments too.",
                 "consumes": [
                     "application/json"
                 ],
@@ -147,7 +166,7 @@
                 "tags": [
                     "comments"
                 ],
-                "summary": "Used to edit an existing comment",
+                "summary": "Edit an existing comment",
                 "parameters": [
                     {
                         "description": "Input data",
@@ -207,7 +226,12 @@
         },
         "/mehms": {
             "get": {
-                "description": "Pagination can be handled via query params",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "Pagination can be handled via query parameters",
                 "consumes": [
                     "application/json"
                 ],
@@ -217,17 +241,22 @@
                 "tags": [
                     "mehms"
                 ],
-                "summary": "Returns a page of mehms",
+                "summary": "Read a page of mehms",
                 "parameters": [
                     {
+                        "minimum": 0,
                         "type": "integer",
-                        "description": "How many mehms will be skipped",
+                        "default": 0,
+                        "description": "states the number of skipped Mehms",
                         "name": "skip",
                         "in": "query"
                     },
                     {
+                        "maximum": 30,
+                        "minimum": 1,
                         "type": "integer",
-                        "description": "How many mehms will be taken",
+                        "default": 30,
+                        "description": "states the count of grabbed Mehms",
                         "name": "take",
                         "in": "query"
                     }
@@ -265,7 +294,12 @@
         },
         "/mehms/{id}": {
             "get": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "This will return the requested Mehm including the information whether you have liked it already.",
                 "consumes": [
                     "application/json"
                 ],
@@ -275,9 +309,10 @@
                 "tags": [
                     "mehms"
                 ],
-                "summary": "Returns a specified mehm",
+                "summary": "View a specified mehm",
                 "parameters": [
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "description": "The ID of the requested mehm",
                         "name": "id",
@@ -321,7 +356,12 @@
         },
         "/mehms/{id}/like": {
             "post": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "This is a like-toggle: if the Mehm had been liked already, the like will be removed.",
                 "consumes": [
                     "application/json"
                 ],
@@ -331,9 +371,10 @@
                 "tags": [
                     "mehms"
                 ],
-                "summary": "Used to like a specified mehm",
+                "summary": "Like a specified mehm",
                 "parameters": [
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "description": "The ID of the requested mehm",
                         "name": "id",
@@ -377,7 +418,12 @@
         },
         "/mehms/{id}/remove": {
             "post": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "Regular users can only delete their own Mehms, privileged users can delete whatever they wish",
                 "consumes": [
                     "application/json"
                 ],
@@ -387,9 +433,10 @@
                 "tags": [
                     "mehms"
                 ],
-                "summary": "Used to delete a specified mehm",
+                "summary": "Delete a Mehm",
                 "parameters": [
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "description": "The ID of the requested mehm",
                         "name": "id",
@@ -433,7 +480,12 @@
         },
         "/mehms/{id}/update": {
             "post": {
-                "description": "optionally showing info for privileged user",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "This will be only possible for own Mehms, unless you are privileged",
                 "consumes": [
                     "application/json"
                 ],
@@ -443,9 +495,10 @@
                 "tags": [
                     "mehms"
                 ],
-                "summary": "Used to delete a specified mehm",
+                "summary": "Edit a Mehm's shown information",
                 "parameters": [
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "description": "The ID of the requested mehm",
                         "name": "id",
@@ -453,6 +506,8 @@
                         "required": true
                     },
                     {
+                        "maxLength": 128,
+                        "minLength": 1,
                         "description": "The new mehm description",
                         "name": "description",
                         "in": "body",
@@ -462,6 +517,8 @@
                         }
                     },
                     {
+                        "maxLength": 32,
+                        "minLength": 1,
                         "description": "The new mehm title",
                         "name": "title",
                         "in": "body",
@@ -519,7 +576,12 @@
         },
         "/user": {
             "get": {
-                "description": "These informations contain username, email address and id",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "This call will respond with your id, username and email.",
                 "consumes": [
                     "application/json"
                 ],
@@ -529,7 +591,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Receive Info about ones self",
+                "summary": "Profile information",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -554,7 +616,12 @@
         },
         "/user/delete": {
             "post": {
-                "description": "Self-delete; admins can delete anybody",
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "Regular user can only delete theirselves, admin users can delete every user",
                 "consumes": [
                     "application/json"
                 ],
@@ -564,7 +631,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Deletes a targeted User",
+                "summary": "Delete a user",
                 "parameters": [
                     {
                         "description": "Input data",
@@ -645,13 +712,16 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 },
                 "isAdmin": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "default": false
                 },
                 "userId": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
@@ -722,6 +792,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "bearerToken": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
